Add range circles for Raid Major Ids